# statueconv

./: Cargo.toml  LICENSE  README.md  basic fucking 16x16 block.3dj  printstatue.lua
shared/: Cargo.toml
shared/src/: formats.rs  lib.rs
shared/src/converters/: mod.rs  printer.rs  statue.rs
shared/src/formats/: printer.rs  statue.rs
src/: main.rs  utils.rs
