[package]
name = "statueconv"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
minecraft-formats = { git = "https://github.com/bananasov/minecraft-formats" }
